--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,13 @@
-dataRetrieval 1.4.0-in developement
+dataRetrieval 2.0.0
+===========
+* Overhaul of function names based on initial user feedback
+* Metadata attributes added to returned dataframes
+* EGRET specific functions moved to EGRET
+
+
+dataRetrieval 1.4.0
 ===========
 * Changed naming convention:
-getDVData -> getNWISDaily
-getSampleData -> getNWISSample
-getSTORETData* -> getWQPSample
-getSampleDataFromFile -> getUserSample
-getDailyDataFromFile -> getUserDaily
-getMetaData -> splits into getNWISInfo and getUserInfo
-getSiteFileData <- getNWISSiteInfo
-getParameterInfo <- getNWISPcodeInfo
-getDataAvailability <- getNWISDataAvailability
-'retrieve' functions changed to 'get'
 * Changed WaterML2 rbind fill from plyr function to dplyr. Removed plyr import, added dplyr.
 *
 
